first review and correction

--- a/index.html
+++ b/index.html
@@ -39,7 +39,13 @@
      <br><br><br>
      <div class="wrapper">
 
-        <div class="this" ><img src="resources/Images/whatsapp1.png"></div>
+        <!-- wrap each 'this' div with another div, the title of the link will be a child the new div.
+        to demonstrate this, I have made changes to the first item (WhatsApp)
+        -->
+        <div class="each">
+            <div class="this" ><img src="resources/Images/whatsapp1.png"></div>
+            <p>WhatsApp</p>
+        </div>
         <div class="this"> <img src="resources/Images/boostrap2.png"></div>
         <div class="this"> <img src="resources/Images/facebook1.jpg"></div>
         <div class="this"> <img src="resources/Images/gmail2.jpg" style="width: 40px;"></div>
